--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.2.36",
         "vue-loader": "^17.3.1",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.2.5",
+        "vue-sweetalert2": "^5.0.5"
     }
 }
